Letter spacing fix

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -147,6 +147,10 @@ a {
 			line-height: 1;
 
 			text-transform: uppercase;
+
+			&--no-space {
+				letter-spacing: 0;
+			}
 		}
 	}
 }
